--- a/src/app/result/[id]/components/ResultDetails/widgets/ResultQuestions/components/ResultQuestion/style.module.scss
+++ b/src/app/result/[id]/components/ResultDetails/widgets/ResultQuestions/components/ResultQuestion/style.module.scss
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     background-color: #7AB2B2;
-    border: 1px solid #4D869C;
+    border: 1px solid #6c5ce7;
     border-radius: 5px;
 
     @include isMobile() {
