--- a/src/components/ProgressBar/style.module.scss
+++ b/src/components/ProgressBar/style.module.scss
@@ -1,18 +1,18 @@
-@import "src/assets/styles/abstracts/index";
+@import 'src/assets/styles/abstracts/index';
 
 .wrapper {
-  display: flex ;
+  display: flex;
   align-items: center;
   justify-content: space-around;
   gap: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
 
-  @include isMobile(){
+  @include isMobile() {
     padding: 10px 0;
   }
 
-  span{
+  span {
     font-size: 16px;
     font-weight: 500;
     color: #3c5357;
@@ -24,8 +24,7 @@
   border-radius: 50px;
 
   :global(.MuiLinearProgress-bar) {
-    background-color: #4a8d8f; // neon green
+    background-color: #6c5ce7; // neon green
     border-radius: 50px;
   }
 }
-
