--- a/src/widgets/Options/style.module.scss
+++ b/src/widgets/Options/style.module.scss
@@ -19,7 +19,7 @@
     border: 1px solid #7fc7d9;
     padding: 10px;
     border-radius: 10px;
-    color: #4d869c;
+    color: #6c5ce7;
     font-size: 1.2rem;
     letter-spacing: 2px;
     font-weight: bold;
@@ -44,10 +44,10 @@
     justify-content: space-between;
     align-items: center;
     width: 80px;
-    color: #4d869c;
+    color: #2d2d2d;
     font-size: 1.2rem;
     font-weight: 500;
-    border: 1px solid #4d869c;
+    border: 1px solid #6c5ce7;
     padding: 10px 20px;
     border-radius: 12px;
 
@@ -59,7 +59,7 @@
     //&:hover {
     //  color: #EEF7FF;
     //  border: 1px solid #EEF7FF;
-    //  background-color: #4D869C;
+    //  background-color: #6c5ce7;
     //  transition: all .4s linear;
     //}
   }
@@ -71,7 +71,7 @@
     justify-content: center;
     align-items: center;
     color: #eef7ff;
-    background-color: #4a8d8f;
+    background-color: #6c5ce7;
     font-size: 1.2rem;
     font-weight: 500;
     padding: 10px 20px;
