--- a/src/app/totalResults/components/style.module.scss
+++ b/src/app/totalResults/components/style.module.scss
@@ -1,12 +1,11 @@
-@import "src/assets/styles/abstracts/index";
-
+@import 'src/assets/styles/abstracts/index';
 
 .results {
   position: relative;
   min-width: 31%;
   max-width: 40%;
   padding: 25px;
-  border: 1px solid #EEF7FF;
+  border: 1px solid #eef7ff;
   background-color: #def0f0;
   border-radius: 15px;
   display: flex;
@@ -34,8 +33,8 @@
     border-radius: 100%;
     font-size: 20px;
     font-weight: bold;
-    background-color: #7FC7D9;
-    color: #EEF7FF;
+    background-color: #7fc7d9;
+    color: #eef7ff;
     left: 2px;
     top: 0px;
   }
@@ -51,9 +50,7 @@
   .wrong {
     font-size: 18px;
   }
-
 }
-
 
 .buttonWrapper {
   display: flex;
@@ -65,14 +62,14 @@
   }
 
   .more {
-    background-color: #4D869C;
-    color: #EEF7FF;
-    border: 1px solid #EEF7FF;
+    background-color: #6c5ce7;
+    color: #eef7ff;
+    border: 1px solid #eef7ff;
   }
 
   .delete {
     background-color: red;
-    color: #EEF7FF;
-    border: 1px solid #EEF7FF;
+    color: #eef7ff;
+    border: 1px solid #eef7ff;
   }
 }
