--- a/src/app/saved-questions/components/QuestionItem/style.module.scss
+++ b/src/app/saved-questions/components/QuestionItem/style.module.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     background-color: #7ab2b2;
-    border: 1px solid #6c5ce7;
+    border: 1px solid #cfbacf;
     border-radius: 5px;
 
     @include isMobile() {
