--- a/src/app/totalResults/components/style.module.scss
+++ b/src/app/totalResults/components/style.module.scss
@@ -62,7 +62,7 @@
   }
 
   .more {
-    background-color: #6c5ce7;
+    background-color: #cfbacf;
     color: #eef7ff;
     border: 1px solid #eef7ff;
   }
