--- a/src/feature/ChooseQuizCategory/style.module.scss
+++ b/src/feature/ChooseQuizCategory/style.module.scss
@@ -10,7 +10,7 @@
     border-radius: 10px;
     padding: 10px 15px;
     font-size: 1.6rem;
-    background: #6c5ce7;
+    background: #cfbacf;
   }
 
   @include isMobile() {
