--- a/src/widgets/Options/style.module.scss
+++ b/src/widgets/Options/style.module.scss
@@ -19,7 +19,7 @@
     border: 1px solid #7fc7d9;
     padding: 10px;
     border-radius: 10px;
-    color: #6c5ce7;
+    color: #cfbacf;
     font-size: 1.2rem;
     letter-spacing: 2px;
     font-weight: bold;
@@ -44,10 +44,11 @@
     justify-content: space-between;
     align-items: center;
     width: 80px;
-    color: #2d2d2d;
+    color: #302944;
+
     font-size: 1.2rem;
     font-weight: 500;
-    border: 1px solid #6c5ce7;
+    border: 1px solid #cfbacf;
     padding: 10px 20px;
     border-radius: 12px;
 
@@ -59,7 +60,7 @@
     //&:hover {
     //  color: #EEF7FF;
     //  border: 1px solid #EEF7FF;
-    //  background-color: #6c5ce7;
+    //  background-color: #cfbacf;
     //  transition: all .4s linear;
     //}
   }
@@ -71,9 +72,8 @@
     justify-content: center;
     align-items: center;
     color: #eef7ff;
-    background-color: #6c5ce7;
+    background-color: #cfbacf;
     font-size: 1.2rem;
-    font-weight: 500;
     padding: 10px 20px;
     border-radius: 12px;
 
