--- a/src/components/ProgressBar/style.module.scss
+++ b/src/components/ProgressBar/style.module.scss
@@ -24,7 +24,7 @@
   border-radius: 50px;
 
   :global(.MuiLinearProgress-bar) {
-    background-color: #6c5ce7; // neon green
+    background-color: #b09dae;
     border-radius: 50px;
   }
 }
