--- a/src/app/result/[id]/components/ResultDetails/style.module.scss
+++ b/src/app/result/[id]/components/ResultDetails/style.module.scss
@@ -1,4 +1,4 @@
-@import "src/assets/styles/abstracts/index";
+@import '../../../../../assets/styles/abstracts/index';
 
 .wrapper {
   display: flex;
