--- a/src/app/saved-questions/style.module.scss
+++ b/src/app/saved-questions/style.module.scss
@@ -1,5 +1,4 @@
-@import "src/assets/styles/abstracts/index";
-
+@import '../../assets/styles/abstracts/index';
 
 .wrapper {
   display: flex;
@@ -19,7 +18,7 @@
     flex-direction: column;
     gap: 30px;
 
-    &.widthFull{
+    &.widthFull {
       width: 100%;
     }
     @include isMobile() {
@@ -41,8 +40,6 @@
       text-align: center;
       font-size: 1.5rem;
     }
-
-
   }
 }
 
