--- a/src/assets/styles/globals.scss
+++ b/src/assets/styles/globals.scss
@@ -1,19 +1,20 @@
-@import "src/assets/styles/abstracts/index";
+@import './abstracts/index';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
-
 }
 
-html, body {
+html,
+body {
   font-family: 'Manrope', sans-serif;
   background-color: #faf5e6;
 }
