--- a/src/widgets/MainWrapper/style.module.scss
+++ b/src/widgets/MainWrapper/style.module.scss
@@ -1,4 +1,4 @@
-@import "src/assets/styles/abstracts/index";
+@import '../../assets/styles/abstracts/index';
 
 .wrapper {
   display: flex;
@@ -9,4 +9,3 @@
     padding: 0px 10px;
   }
 }
-
