--- a/src/widgets/Modal/style.module.scss
+++ b/src/widgets/Modal/style.module.scss
@@ -1,4 +1,4 @@
-@import "src/assets/styles/abstracts/index";
+@import '../../assets/styles/abstracts/index';
 
 .wrapper {
   position: fixed;
@@ -9,7 +9,7 @@
   height: 300px;
   z-index: 100;
   padding: 40px;
-  background-color: #EEF7FF;
+  background-color: #eef7ff;
   border-radius: 15px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   animation: scaleIn 0.3s forwards;
@@ -32,7 +32,6 @@
   justify-content: center;
   align-items: center;
   animation: fadeIn 0.3s forwards;
-
 }
 
 /* Animations */
