--- a/src/widgets/Navigation/syle.module.scss
+++ b/src/widgets/Navigation/syle.module.scss
@@ -1,4 +1,4 @@
-@import "src/assets/styles/abstracts/index";
+@import '../../assets/styles/abstracts/index';
 
 .wrapper {
   font-size: 1.2rem;
@@ -6,7 +6,7 @@
   gap: 50px;
   padding: 20px 150px 15px 150px;
 
-  @include isMobile(){
+  @include isMobile() {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,13 +15,13 @@
     font-size: 1rem;
   }
 
-  .link{
+  .link {
     border-radius: 5px;
     padding: 10px;
 
-    &:hover{
-      transition: all .7s ease;
-      border-bottom: 1px solid #292929 ;
+    &:hover {
+      transition: all 0.7s ease;
+      border-bottom: 1px solid #292929;
     }
   }
 }
