--- a/src/widgets/Options/style.module.scss
+++ b/src/widgets/Options/style.module.scss
@@ -41,9 +41,10 @@
   .primary {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 80px;
+    height: 80px;
     color: #302944;
 
     font-size: 1.2rem;
