--- a/src/components/ProgressBar/style.module.scss
+++ b/src/components/ProgressBar/style.module.scss
@@ -24,7 +24,7 @@
   border-radius: 50px;
 
   :global(.MuiLinearProgress-bar) {
-    background-color: #b09dae;
+    background-color: #9198a1;
     border-radius: 50px;
   }
 }
